Attempt to fix wrong position with IE in standard complicance mode
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/trunk@462093 13f79535-47bb-0310-9956-ffa450edef68

--- a/wicket/src/java/wicket/markup/html/tree/res/tree-table.css
+++ b/wicket/src/java/wicket/markup/html/tree/res/tree-table.css
@@ -51,8 +51,7 @@ div.wicket-tree-table span.icon {
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	margin-left: 2px;
-	position: relative;
-	top: -1px;
+	margin-top: -1px;
 }
 
 div.wicket-tree-table div.row,
